--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://in.images.search.yahoo.com/search/images;_ylt=AwrKB8ouL.Vj1CcbEA27HAx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3Nj?p=cat+images&type=E211IN714G0&ei=UTF-8&fr=mcafee&th=117.5&tw=156.9&imgurl=https%3A%2F%2F3.bp.blogspot.com%2F-dui-f0hQUHE%2FU0Qs5dOcWII%2FAAAAAAAACpg%2FS1lb9AnsMU4%2Fs1600%2Floveable-cat-wallpaper-free.jpg&rurl=https%3A%2F%2Flovableimages.blogspot.com%2F2014%2F04%2Fcute-cat-wallpapers-free-download.html&size=254KB&name=Lovable+Images%3A+Cute+Cat+WallPapers+Free+Download+%7C%7C+Beautiful+Cats+...&oid=8&h=1200&w=1600&turl=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.3ASJSRy03PAtNYOTM-RQwgHaFj%26pid%3DApi%26rs%3D1%26c%3D1%26qlt%3D95%26w%3D156%26h%3D117&tt=Lovable+Images%3A+Cute+Cat+WallPapers+Free+Download+%7C%7C+Beautiful+Cats+...&sigr=WixFFHOobJT_&sigit=o7iSTru9XZ7U&sigi=WQqKKaAoTZhj&sign=jDunoifdvt7V&sigt=jDunoifdvt7V" alt="logo" width="200">
     <script type="text/javascript" src="./script.js">
 </script>
 
